syntax = "proto3";

package proto.v1;
option go_package = "github.com/Teeam-Sync/Sync-Server/api/proto/v1";

import "google/protobuf/empty.proto";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc RefreshToken(google.protobuf.Empty) returns (RefreshTokenResponse);
}

message Token {
  string access_token = 1;
  string refresh_token = 2;
}

// [SignUp] 회원가입 API 요청
message SignUpRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

// [SignUp] 회원가입 API 응답
message SignUpResponse {
  Token token = 1;
}

// [SignIn] 로그인 API 요청
message SignInRequest {
  string email = 1;
  string password = 2;
}

// [SignIn] 로그인 API 응답
message SignInResponse {
  Token token = 1;
}

// [RefreshToken] 토큰 재발급 API 응답
message RefreshTokenResponse {
  Token token = 1;
}